--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ I hope to have the opportunity to work together and do great things!
           </div>
           
           <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden">
-            <a href="https://jofiel15.github.io">
+            <a href="https://github.com/JOFIEL15/sistemaconsultorio/releases">
                 <img class="w-full h-60 object-cover" src="img/proyecto4.JPG" alt="Project 6">
                 <div
                       class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
