actualice el enlace de el lenguaje señas de python

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ I hope to have the opportunity to work together and do great things!
             </div>
             <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden">
                 <a href="https://bienesraicesduranh.com/">
-                    <img class="w-full h-60 object-cover" src="img/proyecto2.JPG" alt="Project 1">
+                    <img class="w-full h-60 object-cover" src="img/proyecto2.JPG" alt="Project 2">
                     <div
                     class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
                 </div>
@@ -242,8 +242,8 @@ I hope to have the opportunity to work together and do great things!
                 </a>
             </div>
             <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden">
-                <a href="/project-2">
-                    <img class="w-full h-60 object-cover" src="img/proyecto3.JPG" alt="Project 1">
+                <a href="https://github.com/JOFIEL15/signtransationjofielontiveros">
+                    <img class="w-full h-60 object-cover" src="img/proyecto3.JPG" alt="Project 3">
                     <div
                     class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
                 </div>
@@ -267,7 +267,7 @@ I hope to have the opportunity to work together and do great things!
             </div>
             <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden">
               <a href="https://jofiel15.github.io/caserita/index.html">
-                  <img class="w-full h-60 object-cover" src="img/caserita.png" alt="Project 1">
+                  <img class="w-full h-60 object-cover" src="img/caserita.png" alt="Project 4">
                   <div
                         class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
                     </div>
@@ -290,7 +290,7 @@ I hope to have the opportunity to work together and do great things!
           
           <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden">
             <a href="https://github.com/JOFIEL15/sistemaconsultorio/releases">
-                <img class="w-full h-60 object-cover" src="img/proyecto4.JPG" alt="Project 6">
+                <img class="w-full h-60 object-cover" src="img/proyecto4.JPG" alt="Project 5">
                 <div
                       class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
                   </div>
@@ -311,7 +311,7 @@ I hope to have the opportunity to work together and do great things!
 
         <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden">
           <a href="https://jofiel15.github.io/autolavadoweb">
-              <img class="w-full h-60 object-cover" src="img/carwas.JPG" alt="Project 7">
+              <img class="w-full h-60 object-cover" src="img/carwas.JPG" alt="Project 6">
               <div
                     class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
                 </div>
