--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css" />
+  
+  //scripts
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
-  <script src="script.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
-  referrerpolicy="no-referrer"></script>
+  
 
 
 
@@ -407,6 +409,7 @@
 
 
 
+  <script src="script.js"></script>
 </body>
 
 </html>
