--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css" />
   
   //scripts
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
@@ -68,7 +67,15 @@
       </div>
     </div>
 
- 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+    <script>
+        var typed = new Typed('.typing', {
+        strings: ['', 'Software engineer,', 'Frontend Developer,', ' 21 years old'],
+        typeSpeed: 100,
+        BackSpeed: 60,
+        loop: true
+    })
+    </script>
 
     </div>
 
