termine de traducir todo el sitio web

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   <br><br><br id="about">
   <section class="p-4 mt-20  mb-40" data-aos="fade-right" data-aos-duration="1500">
     <div class="container mx-auto">
-      <h2 class="text-3xl text-black font-bold">About Me</h2>
-      <p class="text-lg mt-4">
+      <h2 id="tituloabout"  class="text-3xl text-black font-bold">About Me</h2>
+      <p id="textoaboutme" class="text-lg mt-4">
         Hello! I am a passionate software engineer with a solid background in application development and an insatiable
         thirst to learn and grow in the world of technology. With a curious mind and a passion for solving problems, my
         goal is to create innovative solutions that make life easier and more efficient for people.
@@ -113,7 +113,7 @@
 
 
   <section class="text-gray-700 body-font" data-aos="flip-left" data-aos-duration="1500" id="languages">
-    <div class=" ml-20 flex justify-center mt-10 text-4xl font-regular text-black">
+    <div id="frameworks"  class=" ml-20 flex justify-center mt-10 text-4xl font-regular text-black">
       Languages ​​and frameworks with which I have experience
     </div>
     <div class="container px-5 py-12 mx-auto">
@@ -202,8 +202,8 @@
   <section id="projects" class="portfolio-section py-16 px-4" data-aos="zoom-in-left" data-aos-duration="1500">
     <div class="container mx-auto ">
       <div class="text-center mb-12">
-        <h2 class="text-4xl font-bold mb-4">Portfolio Showcase</h2>
-        <p class="text-lg text-black font-semibold">Discover my latest projects and success stories</p>
+        <h2 id="portfolio" class="text-4xl font-bold mb-4">Portfolio Showcase</h2>
+        <p id="portfolio2"  class="text-lg text-black font-semibold">Discover my latest projects and success stories</p>
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
@@ -214,9 +214,9 @@
               class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
             </div>
             <div class="p-4 flex flex-col items-center justify-between relative z-10">
-              <h3 class="text-lg font-medium text-txt group-hover:text-gray-dark"> Certificate generator for my
+              <h3 id="generador"  class="text-lg font-medium text-txt group-hover:text-gray-dark"> Certificate generator for my
                 university</h3>
-              <span class="text-sm font-bold text-black group-hover:text-indigo-500">Developed with:</span>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Developed with:</span>
               <div class="flex flex-row mt-2">
 
                 <img class="w-10 h-10" src="img/html.png" alt="">
@@ -244,7 +244,7 @@
             </div>
             <div class="p-4 flex flex-col items-center justify-between relative z-10">
               <h3 class="text-lg font-medium text-txt group-hover:text-gray-dark"> CV Jofiel Ontiveros</h3>
-              <span class="text-sm font-bold text-black group-hover:text-indigo-500">Developed with:</span>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Developed with:</span>
               <div class="flex flex-row mt-2">
 
                 <img class="w-10 h-10" src="img/html.png" alt="">
@@ -268,8 +268,8 @@
               class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
             </div>
             <div class="p-4 flex flex-col items-center justify-between relative z-10">
-              <h3 class="text-lg font-medium text-txt group-hover:text-gray-dark">Landing Page for real estate</h3>
-              <span class="text-sm font-bold text-black group-hover:text-indigo-500">Developed with:</span>
+              <h3 id="landing" class="text-lg font-medium text-txt group-hover:text-gray-dark">Landing Page for real estate</h3>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Developed with:</span>
 
 
               <div class="flex flex-row mt-2">
@@ -297,8 +297,8 @@
               class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
             </div>
             <div class="p-4 flex flex-col items-center justify-between relative z-10">
-              <h3 class="text-lg font-medium text-txt group-hover:text-gray-dark">Sign translation program</h3>
-              <span class="text-sm font-bold text-black group-hover:text-indigo-500">Developed with:</span>
+              <h3 id="sign"  class="text-lg font-medium text-txt group-hover:text-gray-dark">Sign translation program</h3>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Developed with:</span>
               <div class="flex flex-row mt-2">
 
                 <img class="w-10 h-10 ml-2" src="img/python.png" alt="">
@@ -321,8 +321,8 @@
               class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
             </div>
             <div class="p-4 flex flex-col items-center justify-between relative z-10">
-              <h3 class="text-lg font-medium text-txt group-hover:text-gray-dark"> Project Landing Page</h3>
-              <span class="text-sm font-bold text-black group-hover:text-indigo-500">Developed with:</span>
+              <h3 id="caserita" class="text-lg font-medium text-txt group-hover:text-gray-dark"> Project Landing Page</h3>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Developed with:</span>
               <div class="flex flex-row mt-2">
 
                 <img class="w-10 h-10" src="img/html.png" alt="">
@@ -344,8 +344,8 @@
               class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
             </div>
             <div class="p-4 flex flex-col items-center justify-between relative z-10">
-              <h3 class="text-lg font-medium text-txt group-hover:text-gray-dark"> Medical office system</h3>
-              <span class="text-sm font-bold text-black group-hover:text-indigo-500">Developed with:</span>
+              <h3 id="medical" class="text-lg font-medium text-txt group-hover:text-gray-dark"> Medical office system</h3>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Developed with:</span>
 
               <div class="flex flex-row mt-2">
 
@@ -365,8 +365,8 @@
               class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
             </div>
             <div class="p-4 flex flex-col items-center justify-between relative z-10">
-              <h3 class="text-lg font-medium text-txt group-hover:text-gray-dark"> Carwash Website</h3>
-              <span class="text-sm font-bold text-black group-hover:text-indigo-500">Developed with:</span>
+              <h3 id="carwash" class="text-lg font-medium text-txt group-hover:text-gray-dark"> Carwash Website</h3>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Developed with:</span>
               <div class="flex flex-row mt-2">
 
                 <img class="w-10 h-10" src="img/html.png" alt="">
@@ -391,7 +391,7 @@
   </script>
   <footer class="bg-black text-white py-8" id="contact" data-aos="" data-aos-duration="">
     <div class="container mx-auto flex flex-col items-center justify-center">
-      <h2 class="text-2xl font-bold mb-8">Contact</h2>
+      <h2 id="contacto"   class="text-2xl font-bold mb-8">Contact</h2>
       <div class="flex space-x-6">
         <a data-tippy-content="My Linkedin"
           href="https://www.linkedin.com/in/jofiel-alfredo-ontiveros-rivera-48583022b/" target="_blank">
