--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
   <nav>
-    <div class="fixed-top container flex items-center justify-center p-6 mx-auto text-white capitalize ">
+    <div class="fixed-top-0 w-full container flex items-center justify-center p-6 mx-auto text-white capitalize  ">
 
       <a id="nav-start" href="#start"
         class="nav-link text-white dark:text-white border-b-2 border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Start</a>
