--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 
 
-  <section id="projects" class="portfolio-section py-16 px-4" data-aos="zoom-in-left" data-aos-duration="1500">
+  <section id="projects" class="portfolio-section " data-aos="zoom-in-left" data-aos-duration="1500">
     <div class="container mx-auto ">
       <div class="text-center mb-12">
         <h2 id="portfolio" class="text-4xl font-bold mb-4">Portfolio Showcase</h2>
