al parecer ya arregle la nvbar

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 
 <body>
-  <nav>
-    <div class="fixed-top-0 w-full container flex items-center justify-center p-6 mx-auto text-white capitalize  ">
+  <nav class="fixed top-0 w-full z-10">
+    <div class="container flex flex-wrap items-center justify-center p-4 mx-auto ">
 
       <a id="nav-start" href="#start"
         class="nav-link text-white dark:text-white border-b-2 border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Start</a>
@@ -201,7 +201,7 @@
 
 
 
-  <section id="projects" class="portfolio-section " data-aos="zoom-in-left" data-aos-duration="1500">
+  <section id="projects" class="portfolio-section py-16 px-4" data-aos="zoom-in-left" data-aos-duration="1500">
     <div class="container mx-auto ">
       <div class="text-center mb-12">
         <h2 id="portfolio" class="text-4xl font-bold mb-4">Portfolio Showcase</h2>
