agg margen al boton de idioma

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a id="nav-contact" href="#contact"
         class="nav-link text-white dark:text-white border-b-2 border-transparent hover:text-white hover:border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Contact</a>
 
-      <label class="switch">
+      <label class="switch ml-2">
         <input type="checkbox" id="toggle-btn">
         <span class="slider round"></span>
       </label>
