añadi nuevas animacion y le di estilo al btn

--- a/index.html
+++ b/index.html
@@ -30,23 +30,30 @@
 
       <a id="nav-start" href="#start"
         class="nav-link text-white dark:text-white border-b-2 border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Start</a>
+        <a id="nav-lenguajes" href="#languages"
+        class="nav-link text-white dark:text-white border-b-2 border-transparent hover:text-white hover:border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Skills</a>
       <a id="nav-about" href="#about"
         class="nav-link text-white dark:text-white border-b-2 border-transparent hover:text-white hover:border-white mx-1.5 sm:mx-6 text-sm sm:text-base">About</a>
-      <a id="nav-lenguajes" href="#languages"
-        class="nav-link text-white dark:text-white border-b-2 border-transparent hover:text-white hover:border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Languages</a>
       <a id="nav-projects" href="#projects"
         class="nav-link text-white dark:text-white border-b-2 border-transparent hover:text-white hover:border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Projects</a>
       <a id="nav-contact" href="#contact"
         class="nav-link text-white dark:text-white border-b-2 border-transparent hover:text-white hover:border-white mx-1.5 sm:mx-6 text-sm sm:text-base">Contact</a>
 
-      <label class="switch ml-2">
-        <input type="checkbox" id="toggle-btn">
-        <span class="slider round"></span>
-      </label>
+     <label class="switch ml-2">
+    <input type="checkbox" id="toggle-btn">
+    <span class="slider round">
+        <img src="img/usa.png" alt="USA" class="flag-icon flag-icon-usa">
+        <img src="img/mexico.png" alt="Mexico" class="flag-icon flag-icon-mexico">
+    </span>
+</label>
+
+
+
+
     </div>
   </nav>
-
-  <section data-aos="fade-up" data-aos-duration="1500">
+<main>
+  <section  data-aos="fade-up" data-aos-duration="1500">
     <div class="w-full h-screen relative fondo" id="start">
       <div class="w-full h-full xl:px-16 xs: ml-2 px-8 flex gap-4 justify-center items-center">
         <div class="w-full">
@@ -85,9 +92,91 @@
 
   </section>
 
+  </main>
 
-  <br><br><br id="about">
-  <section class="p-4 mt-20  mb-40" data-aos="fade-right" data-aos-duration="1500">
+  <section class="text-gray-700 body-font mt-40" id="languages">
+    <div id="frameworks" class="flex justify-center mt-10 text-4xl font-regular text-black mx-auto" data-aos="fade-up" data-aos-delay="100">
+        Skills
+    </div>
+    <div class="container px-5 py-12 mx-auto">
+        <div class="flex flex-wrap text-center justify-center">
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="300">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="img/html.png" class="w-32 h-32 mb-3 img-fixed-size">
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="400">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="img/css.png" class="w-32 h-32 mb-3 img-fixed-size">
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="500">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="img/js.png" class="w-32 h-32 mb-3 img-fixed-size">
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="600">
+                <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                    <div class="flex justify-center">
+                        <img src="img/php.png" class="w-32 h-32 mb-3 img-fixed-size">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container px-5 py-12 mx-auto">
+            <div class="flex flex-wrap text-center justify-center">
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="700">
+                    <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                        <div class="flex justify-center">
+                            <img src="img/c.png" class="w-32 h-32 mb-3 img-fixed-size">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="800">
+                    <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                        <div class="flex justify-center">
+                            <img src="img/python.png" class="w-32 h-32 mb-3 img-fixed-size">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="900">
+                    <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                        <div class="flex justify-center">
+                            <img src="img/bootstrap.png" class="w-32 h-32 mb-3 img-fixed-size">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="1000">
+                    <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
+                        <div class="flex justify-center">
+                            <img src="img/tailwind.png" class="w-32 h-32 mb-3 img-fixed-size">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+  
+
+
+ 
+  <section class="p-4 mt-20  mb-40" id="about" data-aos="fade-right" data-aos-duration="1500">
     <div class="container mx-auto">
       <h2 id="tituloabout" class="text-3xl text-black font-bold">About Me</h2>
       <p id="textoaboutme" class="text-lg mt-4">
@@ -114,94 +203,10 @@
   </section>
 
 
-  <section class="text-gray-700 body-font" data-aos="flip-left" data-aos-duration="1500" id="languages">
-    <div id="frameworks" class=" ml-20 flex justify-center mt-10 text-4xl font-regular text-black">
-      Languages ​​and frameworks with which I have experience
-    </div>
-    <div class="container px-5 py-12 mx-auto">
-      <div class="flex flex-wrap text-center justify-center">
-        <div class="p-4 md:w-1/4 sm:w-1/2">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/html.png" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-
-          </div>
-        </div>
-
-        <div class="p-4 md:w-1/4 sm:w-1/2">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/css.png" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-
-          </div>
-        </div>
-
-        <div class="p-4 md:w-1/4 sm:w-1/2">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/js.png" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-
-          </div>
-        </div>
-
-        <div class="p-4 md:w-1/4 sm:w-1/2">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/php.png" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-
-          </div>
-        </div>
-
-      </div>
-      <div class="container px-5 py-12 mx-auto">
-        <div class="flex flex-wrap text-center justify-center">
-          <div class="p-4 md:w-1/4 sm:w-1/2">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/c.png" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/python.png" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/bootstrap.png" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/tailwind.png" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-
-            </div>
-          </div>
-
-        </div>
-      </div>
-  </section>
+ 
 
 
-
-  <section id="projects" class="portfolio-section py-16 px-4" data-aos="zoom-in-left" data-aos-duration="1500">
+  <section id="projects" class="portfolio-section py-16 px-4" data-aos="fade-up" data-aos-duration="1500">
     <div class="container mx-auto ">
       <div class="text-center mb-12">
         <h2 id="portfolio" class="text-4xl font-bold mb-4">Portfolio Showcase</h2>
