--- a/index.html
+++ b/index.html
@@ -80,10 +80,15 @@
             <p id="frontend-txt" class="mt-4 sm:text-lg xs:text-md text-white">Experienced front-end Developer
               with 2+
               years of expertise in Html, CSS, JS, PHP, SQL, and other technologies.</p>
+              
+              <button type="button" class=" mt-10 text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" data-aos="fade-left" data-aos-delay="400"><a href="cv.pdf" download="cv.pdf" id="cv">Download CV</a></button>
+
         </div>
 
+        
+
         <div class="xl:max-w-[30%] md:max-w-[30%] h-fit hidden md:block ">
-          <img class="rounded-sm rounded-br-[5rem] rounded-tl-[5rem]" src="img/fondo.JPG" alt="My Pic" />
+          <img class="rounded-md rounded-br-[5rem] rounded-tl-[5rem]" src="img/fondo.JPG" alt="My Pic" />
         </div>
       </div>
     </div>
