añadi iconos centre textos mejore cosas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
   //scripts
 
@@ -123,12 +125,13 @@
   </main>
 
   <section class="text-gray-700 body-font mt-40" id="languages">
-    <div id="frameworks" class="flex justify-center mt-10 text-4xl font-regular text-black mx-auto" data-aos="fade-up" data-aos-delay="100">
+    <br>
+    <div id="frameworks" class="flex justify-center mt-10 text-4xl font-bold text-black mx-auto" data-aos="fade-up" data-aos-delay="100">
         Skills
     </div>
     <div class="container px-5 py-12 mx-auto">
         <div class="flex flex-wrap text-center justify-center">
-            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="300">
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="100">
                 <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                     <div class="flex justify-center">
                         <img src="img/html.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -136,7 +139,7 @@
                 </div>
             </div>
 
-            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="400">
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="200">
                 <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                     <div class="flex justify-center">
                         <img src="img/css.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -144,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="500">
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="300">
                 <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                     <div class="flex justify-center">
                         <img src="img/js.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -152,7 +155,7 @@
                 </div>
             </div>
 
-            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="600">
+            <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="400">
                 <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                     <div class="flex justify-center">
                         <img src="img/php.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -163,7 +166,7 @@
 
         <div class="container px-5 py-12 mx-auto">
             <div class="flex flex-wrap text-center justify-center">
-                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="700">
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="500">
                     <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                         <div class="flex justify-center">
                             <img src="img/c.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -171,7 +174,7 @@
                     </div>
                 </div>
 
-                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="800">
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="600">
                     <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                         <div class="flex justify-center">
                             <img src="img/python.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -179,7 +182,7 @@
                     </div>
                 </div>
 
-                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="900">
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="700">
                     <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                         <div class="flex justify-center">
                             <img src="img/bootstrap.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -187,7 +190,7 @@
                     </div>
                 </div>
 
-                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="1000">
+                <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="800">
                     <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
                         <div class="flex justify-center">
                             <img src="img/tailwind.png" class="w-32 h-32 mb-3 img-fixed-size">
@@ -206,7 +209,10 @@
  
   <section class="p-4 mt-20  mb-40" id="about" data-aos="fade-right" data-aos-duration="1500">
     <div class="container mx-auto">
-      <h2 id="tituloabout" class="text-3xl text-black font-bold">About Me</h2>
+      <h2 id="tituloabout" class=" text-black flex justify-center mt-10 text-4xl font-regular text-black mx-auto font-bold">About Me</h2>
+      <h3 id="webd" class="flex items-center text-2xl text-black justify-center mt-3 mx-auto font-semibold">
+        An enthusiast Developer  <span class="material-icons ml-2 mt-2" style="color: #000000;">computer</span>
+    </h3>
       <p id="textoaboutme" class="text-lg mt-4">
         Hello! I am a passionate software engineer with a solid background in application development and an insatiable
         thirst to learn and grow in the world of technology. With a curious mind and a passion for solving problems, my
@@ -237,8 +243,8 @@
   <section id="projects" class="portfolio-section py-16 px-4" data-aos="fade-up" data-aos-duration="1500">
     <div class="container mx-auto ">
       <div class="text-center mb-12">
-        <h2 id="portfolio" class="text-4xl font-bold mb-4">Portfolio Showcase</h2>
-        <p id="portfolio2" class="text-lg text-black font-semibold">Discover my latest projects and success stories</p>
+        <h2 id="portfolio" class="text-4xl font-bold mb-4 flex justify-center">Portfolio Showcase</h2>
+        <p id="portfolio2" class="text-lg text-black font-semibold flex justify-center">Discover my latest projects and success stories</p>
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
