--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
 
 
  
-  <section class="p-4 mt-20  mb-40" id="about" data-aos="fade-right" data-aos-duration="1500">
+  <section class="p-4 mt-20  mb-40" id="about" >
     <div class="container mx-auto">
-      <h2 id="tituloabout" class=" text-black flex justify-center mt-10 text-4xl font-regular text-black mx-auto font-bold">About Me</h2>
-      <h3 id="webd" class="flex items-center text-2xl text-black justify-center mt-3 mx-auto font-semibold">
+      <h2 id="tituloabout" class=" text-black flex justify-center mt-10 text-4xl font-regular text-black mx-auto font-bold" data-aos="fade-right" data-aos-delay="100">About Me</h2>
+      <h3 id="webd" class="flex items-center text-2xl text-black justify-center mt-3 mx-auto font-semibold" data-aos="fade-right" data-aos-delay="200">
         An enthusiast Developer  <span class="material-icons ml-2 mt-2" style="color: #000000;">computer</span>
     </h3>
-      <p id="textoaboutme" class="text-lg mt-4">
+      <p id="textoaboutme" class="text-lg mt-4"  data-aos="fade-right" data-aos-delay="300" >
         Hello! I am a passionate software engineer with a solid background in application development and an insatiable
         thirst to learn and grow in the world of technology. With a curious mind and a passion for solving problems, my
         goal is to create innovative solutions that make life easier and more efficient for people.
@@ -240,15 +240,15 @@
  
 
 
-  <section id="projects" class="portfolio-section py-16 px-4" data-aos="fade-up" data-aos-duration="1500">
+  <section id="projects" class="portfolio-section py-16 px-4" >
     <div class="container mx-auto ">
       <div class="text-center mb-12">
-        <h2 id="portfolio" class="text-4xl font-bold mb-4 flex justify-center">Portfolio Showcase</h2>
-        <p id="portfolio2" class="text-lg text-black font-semibold flex justify-center">Discover my latest projects and success stories</p>
+        <h2 id="portfolio" class="text-4xl font-bold mb-4 flex justify-center" data-aos="fade-right" data-aos-delay="100">Portfolio Showcase</h2>
+        <p id="portfolio2" class="text-lg text-black font-semibold flex justify-center" data-aos="fade-left" data-aos-delay="200">Discover my latest projects and success stories</p>
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
-        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300">
+        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300" data-aos="fade-right" data-aos-delay="300">
           <a href="https://generadorconstanciasuadeo.000webhostapp.com/constancias.php">
             <img class="w-full h-60 object-cover" src="img/proyecto1.JPG" alt="Project 1">
             <div
@@ -278,7 +278,7 @@
         </div>
 
 
-        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300">
+        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300" data-aos="fade-right" data-aos-delay="400">
           <a href="https://jofiel15.github.io/cv-jofielontiveros">
             <img class="w-full h-60 object-cover" src="img/cv.png" alt="Project 2">
             <div
@@ -303,7 +303,7 @@
           </a>
         </div>
 
-        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300">
+        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300" data-aos="fade-right" data-aos-delay="500">
           <a href="https://bienesraicesduranh.com/">
             <img class="w-full h-60 object-cover" src="img/proyecto2.JPG" alt="Project 2">
             <div
@@ -333,7 +333,7 @@
             </div>
           </a>
         </div>
-        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300 ">
+        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300 " data-aos="fade-left" data-aos-delay="600">
           <a href="https://github.com/JOFIEL15/signtransationjofielontiveros">
             <img class="w-full h-60 object-cover" src="img/proyecto3.JPG" alt="Project 3">
             <div
@@ -358,7 +358,7 @@
             </div>
           </a>
         </div>
-        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300">
+        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300" data-aos="fade-left" data-aos-delay="700">
           <a href="https://jofiel15.github.io/caserita/index.html">
             <img class="w-full h-60 object-cover" src="img/caserita.png" alt="Project 4">
             <div
@@ -382,7 +382,7 @@
           </a>
         </div>
 
-        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300 ">
+        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300 " data-aos="fade-left" data-aos-delay="800">
           <a href="https://github.com/JOFIEL15/sistemaconsultorio/releases">
             <img class="w-full h-60 object-cover" src="img/proyecto4.JPG" alt="Project 5">
             <div
@@ -404,7 +404,7 @@
           </a>
         </div>
 
-        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300">
+        <div class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300" data-aos="fade-right" data-aos-delay="900">
           <a href="https://jofiel15.github.io/autolavadoweb">
             <img class="w-full h-60 object-cover" src="img/carwas.JPG" alt="Project 6">
             <div
@@ -435,9 +435,9 @@
   <script>
     AOS.init();
   </script>
-  <footer class="bg-black text-white py-8" id="contact" data-aos="" data-aos-duration="">
+  <footer class="bg-black text-white py-8" id="contact" >
     <div class="container mx-auto flex flex-col items-center justify-center">
-      <h2 id="contacto" class="text-2xl font-bold mb-8">Contact</h2>
+      <h2 id="contacto" class="text-2xl font-bold mb-8" data-aos="">Contact</h2>
       <div class="flex space-x-6">
         <a data-tippy-content="My Linkedin"
           href="https://www.linkedin.com/in/jofiel-alfredo-ontiveros-rivera-48583022b/" target="_blank">
